# aviasales-test-task

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: self-check.yml
aviasales_xml_parsing_task/: __init__.py  find_difference.py  make_output.py  parser.py
aviasales_xml_parsing_task/scripts/: flights_parser.py
data_folder/: differencies_in_requests.json
tests/: test_build_data.py
tests/fixtures/: data_sample_1.xml  data_sample_2.xml  expected.py
